# ProgrammationGenerique_TP2

./: Accessor.hpp  CMakeLists.txt  Color.hpp  Histogramme.hpp  Image2D.hpp  Image2DReader.hpp  Image2DWriter.hpp  README.md  cathodic.cpp  egaliseur-couleur.cpp  histogramme.cpp  invert-red-blue.cpp  save-channels.cpp  save-green-channel.cpp  testColorImage2D.cpp  testGrayLevelImage2D.cpp
